--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,10 @@
 name = "akshucloud"
-main = "src/index.ts"
-compatibility_date = "2024-12-01"
+type = "javascript"
 
-[assets]
-directory = "dist/public"
-binding = "ASSETS"
+[build]
+upload = { format = "service-worker" }
+
+[site]
+bucket = "./dist/public"
+entry-point = "./dist/functions"
+
